# prismal

./: .gitattributes  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  cspell.config.yaml
.cspell/: custom-dictionary.txt
.git-hooks/: cargo-workspace.sh
.github/workflows/: rust.yml
crates/prismal-app-core/: Cargo.toml
crates/prismal-app-core/src/: info.rs  lib.rs  prelude.rs  resources.rs
crates/prismal-app-core/src/traits/: app_core.rs  app_ecs.rs  app_factory.rs  mod.rs
crates/prismal-assets/: Cargo.toml
crates/prismal-assets-core/: Cargo.toml
crates/prismal-assets-core/src/: lib.rs  prelude.rs  read.rs  type_id.rs
crates/prismal-assets-core/src/id/: factory.rs  id_type.rs  mod.rs
crates/prismal-assets-core/src/key/: asset_key.rs  factory.rs  mod.rs
crates/prismal-assets-core/src/traits/: loaded_asset.rs  mod.rs
crates/prismal-assets-core/tests/: id.rs  key.rs  type_id.rs
crates/prismal-assets/src/: init.rs  lib.rs  prelude.rs
crates/prismal-assets/src/loaded/: bytes.rs
crates/prismal-assets/src/resource/: assets.rs
crates/prismal-ecs/: Cargo.toml
crates/prismal-ecs-core/: Cargo.toml
crates/prismal-ecs-core/src/: lib.rs  prelude.rs  world.rs
crates/prismal-ecs-core/src/traits/: initializer.rs  mod.rs
crates/prismal-ecs-core/tests/: dispatcher.rs
crates/prismal-ecs/src/: entity.rs  init.rs  lib.rs  prelude.rs  world.rs
crates/prismal-ecs/src/component/: key.rs  linear_acceleration.rs  linear_velocity.rs  mod.rs  position.rs  rotation.rs  scale.rs
crates/prismal-ecs/src/component/storage/: component_storage.rs  hash_map_component_storage.rs  mod.rs  multi_hash_map_component_storage.rs
crates/prismal-ecs/src/resource/: time.rs
crates/prismal-ecs/src/system/: linear_acceleration.rs  linear_velocity.rs  mod.rs  update_time.rs
crates/prismal-ecs/tests/: component.rs  component_storage.rs  component_storage_multi_hash_map.rs  component_storage_single_hash_map.rs  entity.rs  world.rs
crates/prismal-ecs/tests/common/: component_storage.rs
crates/prismal-entry/: Cargo.toml
crates/prismal-entry/src/: ecs.rs  entry.rs  event_handler.rs  lib.rs  prelude.rs
crates/prismal-events/: Cargo.toml
crates/prismal-events/src/: callback.rs  init.rs  lib.rs  manager.rs  prelude.rs
crates/prismal-events/src/event/: base_event.rs  keyboard_event_data.rs  mod.rs  mouse_button_event_data.rs  mouse_motion_event_data.rs  mouse_wheel_event_data.rs  window_focus_event_data.rs  window_move_event_data.rs
crates/prismal-events/src/input/: input_state.rs  key_code.rs  mod.rs  mouse_button.rs  mouse_scroll_delta.rs
crates/prismal-events/src/system/: mod.rs  update_events.rs
crates/prismal-gfx/: Cargo.toml
crates/prismal-gfx/assets/: triangle.wgsl
crates/prismal-gfx/src/: lib.rs  pipeline.rs  prelude.rs
crates/prismal-gfx/src/buffer/: simple.rs
crates/prismal-gfx/src/state/: gfx_state.rs  mod.rs
crates/prismal-gfx/src/vertex/: d2.rs  d3.rs  mod.rs  vertex_trait.rs
crates/prismal-math/: Cargo.toml
crates/prismal-math/src/: lib.rs  matrix.rs  prelude.rs  quat.rs  scalar.rs  vector.rs
crates/prismal-math/tests/: scalar_lerp.rs  scalar_lerp_factor.rs  scalar_remap.rs  vector_from_tuple.rs  vector_splat.rs
crates/prismal-platform-init/: Cargo.toml
crates/prismal-platform-init/src/: init.rs  lib.rs  logging.rs  prelude.rs
crates/prismal-utils/: Cargo.toml
crates/prismal-utils/src/: compare.rs  futures.rs  interior_mut.rs  lib.rs  prelude.rs  sync.rs
crates/prismal-utils/src/hash/: fast.rs  int.rs  mod.rs
crates/prismal-utils/src/shared/: mod.rs  sync.rs  unsync.rs
crates/prismal-utils/src/string/: key.rs
crates/prismal-utils/tests/: compare_function.rs  partial_compare_function.rs
crates/prismal-window/: Cargo.toml
crates/prismal-window/src/: dpi.rs  init.rs  lib.rs  prelude.rs
examples/sandbox-app/: Cargo.toml  build.rs  index.html
examples/sandbox-app/assets/: triangle.wgsl
examples/sandbox-app/src/: lib.rs  main.rs
examples/sandbox-app/src/assets/: triangle.wgsl
examples/sandbox-app/src/sandbox_ecs/system/: log_fps.rs  mod.rs
src/: lib.rs  prelude.rs
