[package]
name = "prismal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prismal-app-core = { version = "0.1.0", path = "crates/prismal-app-core" }
prismal-assets = { version = "0.1.0", path = "crates/prismal-assets" }
prismal-ecs = { version = "0.1.0", path = "crates/prismal-ecs" }
prismal-entry = { version = "0.1.0", path = "crates/prismal-entry" }
prismal-gfx = { version = "0.1.0", path = "crates/prismal-gfx" }
prismal-math = { version = "0.1.0", path = "crates/prismal-math" }
prismal-utils = { version = "0.1.0", path = "crates/prismal-utils" }

[workspace]
members = [
    "crates/*",
    "examples/sandbox-app",
]