[package]
name = "prismal-app-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prismal-utils = { version = "0.1.0", path = "../prismal-utils" }
prismal-ecs-core = { version = "0.1.0", path = "../prismal-ecs-core" }
downcast = "0.11.0"