[package]
name = "prismal-assets-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prismal-utils = { version = "0.1.0", path = "../prismal-utils" }
downcast = "0.11.0"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"