[package]
name = "prismal-assets-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prismal-utils = { version = "0.1.0", path = "../prismal-utils" }

downcast = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
anyhow = "1.0"
cfg-if = "1"


[target.'cfg(target_arch="wasm32")'.dependencies]
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = ["Window", "Location"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_test = "1.0"