[package]
name = "prismal-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prismal-assets-core = { version = "0.1.0", path = "../prismal-assets-core" }
prismal-ecs-core = { version = "0.1.0", path = "../prismal-ecs-core" }
prismal-utils = { version = "0.1.0", path = "../prismal-utils" }
