[package]
name = "prismal-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prismal-utils = { version = "0.1.0", path = "../prismal-utils" }

serde = { version = "1.0", features = ["derive"] }
downcast = "0.11.0"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rayon = "1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_test = "1.0"