[package]
name = "prismal-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prismal-window = { version = "0.1.0", path = "../prismal-window" }
prismal-math = { version = "0.1.0", path = "../prismal-math" }
prismal-utils = { version = "0.1.0", path = "../prismal-utils" }

serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_test = "1.0"
