[package]
name = "prismal-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.20", features = ["serde", "approx"] }
approx = "0.5"
num-traits = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"