[package]
name = "prismal-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interior_mut = "0.1.0"
pollster = "0.2"
cfg-if = "1"

parking_lot = { version = "0.12", features = ["nightly"] }
bytemuck = {version = "1.9", features = ["derive"]}

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]