[package]
name = "prismal-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prismal-app-core = {version = "0.1.0", path = "../prismal-app-core"}
prismal-utils = { version = "0.1.0", path = "../prismal-utils" }
winit = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
 