[package]
name = "sandbox-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prismal = { version = "0.1.0", path = "../.." }
log = "0.4"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
